# fortifile

./: .gitignore  Cargo.toml  README.md  build.sh
FortiFile.app/Contents/: Info.plist
FortiFile.app/Contents/MacOS/: FortiFile
FortiFile.app/Contents/MacOS/FortiFileOpener.app/Contents/: Info.plist
FortiFile.app/Contents/MacOS/FortiFileOpener.app/Contents/Resources/Scripts/: main.scpt
MacOS/: Info.plist
scripts/: open_fortifile.scpt
src/: main.rs
test/: test.backup.docx  test.docx.enc
