[package]
name = "fortifile"
version = "0.1.0"
edition = "2021"
description = "A simple one-click file encrypter and decrypter"

[dependencies]
docx-rs = "0.3.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.3"
hex = "0.4"
rand = "*"
notify = "5.0.0-pre.14"
opener = "*"
tempfile = "*"
tao = "0.28.1"

[package.metadata.bundle]
name = "FortiFile"
identifier = "com.jt.FortiFile"
version = "1.0.0"
# icon = "path/to/icon.icns"
